--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="profile">
         <img src="download.jpg" alt="">
         <h2>Hello.</h2>
-        <p>I am a Web Developer.I am a bca student.I like to eat coffee☕☕☕.</p>
+        <p>I am a Web Developer.I am a bca student.I like  coffee☕☕☕.</p>
       </div>
       <hr>
       <div class="skills">
@@ -33,7 +33,7 @@
         <div class="skill-row">
           <img class="img2" src="download2.png" alt="">
           <h3>Mastery in Designing using CSS</h3>
-          <p>As i say I wanted to be aWeb developer and for that i had studied designing using CSS.When i am 18 i had designed my first website.And i am very excited when i had designed my first website.</p>
+          <p>As i say I wanted to be aWeb developer and for that i had studied designing using CSS.When i was 18 i had designed my first website.And i am very excited when i had designed my first website.</p>
         </div>
       </div>
       <hr>
